--- a/signpost-app/app/src/main/res/layout/activity_maps.xml
+++ b/signpost-app/app/src/main/res/layout/activity_maps.xml
@@ -9,25 +9,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end|bottom"
-                android:layout_margin="16dp"
-                android:alpha="0.5"
-                android:contentDescription="@string/message"
-                android:elevation="4dp"
-                android:enabled="true"
-                android:src="@drawable/ic_baseline_message_24" />
-
             <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:id="@+id/map"
                 android:name="com.google.android.gms.maps.SupportMapFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context=".MapsActivity" />
+                tools:context=".ui.MapsActivity" />
 
         </FrameLayout>
 
